syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.consensus">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "basic_types.proto";
import "custom_fees.proto";
import "duration.proto";
import "timestamp.proto";

/**
 * All fields left null will not be updated.
 * See [ConsensusService.updateTopic()](#proto.ConsensusService)
 */
message ConsensusUpdateTopicTransactionBody {
    /**
     * UNDOCUMENTED
     */
    TopicID topicID = 1;

    /**
     * If set, the new memo to be associated with the topic (UTF-8 encoding max 100 bytes)
     */
    google.protobuf.StringValue memo = 2;

    /**
     * Effective consensus timestamp at (and after) which all consensus transactions and queries will fail.
     * The expirationTime may be no longer than MAX_AUTORENEW_PERIOD (8000001 seconds) from the consensus timestamp of
     * this transaction.
     * On topics with no adminKey, extending the expirationTime is the only updateTopic option allowed on the topic.
     * If unspecified, no change.
     */
    Timestamp expirationTime = 4;

    /**
     * Access control for update/delete of the topic.
     * If unspecified, no change.
     * If empty keyList - the adminKey is cleared.
     */
    Key adminKey = 6;

    /**
     * Access control for ConsensusService.submitMessage.
     * If unspecified, no change.
     * If empty keyList - the submitKey is cleared.
     */
    Key submitKey = 7;

    /*
     * The amount of time to extend the topic's lifetime automatically at expirationTime if the autoRenewAccount is
     * configured and has funds (once autoRenew functionality is supported by HAPI).
     * Limited to between MIN_AUTORENEW_PERIOD (6999999 seconds) and MAX_AUTORENEW_PERIOD (8000001 seconds) by
     * servers-side configuration (which may change).
     * If unspecified, no change.
     */
    Duration autoRenewPeriod = 8;

    /**
     * Optional account to be used at the topic's expirationTime to extend the life of the topic.
     * Once autoRenew functionality is supported by HAPI, the topic lifetime will be extended up to a maximum of the
     * autoRenewPeriod or however long the topic can be extended using all funds on the account (whichever is the
     * smaller duration/amount).
     * If specified as the default value (0.0.0), the autoRenewAccount will be removed.
     * If unspecified, no change.
     */
    AccountID autoRenewAccount = 9;

    /**
     * Access control for update/delete of custom fees.
     * <br/>
     * If set, subsequent consensus_update_topic transactions signed with this
     *  key MAY update or delete the custom fees for this topic.
     * <p>
     * If set to a Key containing a non-empty KeyList, the previous key and new
     *  key MUST both sign this transaction. The previous value will be replaced.
     * <br/>
     * If set to a Key containing an empty KeyList, the previous key and the
     *  admin key MUST both sign this transaction. The previous value will be
     *  cleared.
     * <br/>
     * If not set, the current key SHALL NOT change.<br/>
     * <br/>
     * If unset in state, this field MUST NOT be set in this transaction. If
     *  not set when the topic is created, this field CANNOT be set via update.
     * <br/>
     */
    Key fee_schedule_key = 10;

    /**
     * A set of keys that are allowed to submit messages to the topic without
     * paying the topic's custom fees.
     * <br/>
     * If a submit transaction is signed by _any_ key included in this set,
     *  custom fees SHALL NOT be charged for that transaction.
     * <p>
     * fee_exempt_key_list SHALL NOT contain more than
     *  MAX_ENTRIES_FOR_FEE_EXEMPT_KEY_LIST keys.
     * <br/>
     * fee_exempt_key_list SHALL NOT contain any duplicate keys.
     * <br/>
     * fee_exempt_key_list MAY contain keys for accounts that are inactive,
     *  deleted, or non-existent.
     * If fee_exempt_key_list is unset in this transaction, there SHALL NOT be
     *  any fee-exempt keys.  In particular, the following keys SHALL NOT be
     *  implicitly or automatically added to this list:
     *  `adminKey`, `submitKey`, `fee_schedule_key`.
     */


    /**
     * A set of keys that are allowed to submit messages to the topic without
     * paying the topic's custom fees.
     * <br/>
     * If a submit transaction is signed by _any_ key included in this set,
     *  custom fees SHALL NOT be charged for that transaction.
     * <p>
     * If this field is not set, the current set of keys SHALL NOT change.<br/>
     * <br/>
     * If this field is set, but contains an empty list, any existing fee-exempt
     * keys SHALL be removed.
     * <br/>
     * fee_exempt_key_list SHALL NOT contain more than
     *  MAX_ENTRIES_FOR_FEE_EXEMPT_KEY_LIST keys.
     * <br/>
     * fee_exempt_key_list SHALL NOT contain any duplicate keys.
     * <br/>
     * fee_exempt_key_list MAY contain keys for accounts that are inactive,
     *  deleted, or non-existent.
     */
    FeeExemptKeyList fee_exempt_key_list = 11;

    /**
     * A set of custom fee definitions.
     * <br/>
     * These are fees to be assessed for each submit to this topic.
     * <p>
     * Each fee defined in this set SHALL be evaluated for
     * each message submitted to this topic, and the resultant
     * total assessed fees SHALL be charged.
     * <br/>
     * Custom fees defined here SHALL be assessed in addition to the base
     * network and node fees.
     * <br/>
     * custom_fees list SHALL NOT contain more than
     *  MAX_CUSTOM_FEE_ENTRIES_FOR_TOPICS entries.
     */

    /**
     * A set of custom fee definitions.
     * <br/>
     * These are fees to be assessed for each submit to this topic.
     * <p>
     * Each fee defined in this set SHALL be evaluated for
     * each message submitted to this topic, and the resultant
     * total assessed fees SHALL be charged.
     * <br/>
     * Custom fees defined here SHALL be assessed in addition to the base
     * network and node fees.
     * <br/>
     * If this field is not set, the current set of custom fees
     * SHALL NOT change.
     * <br/>
     * If this field is set, but contains an empty list, all current custom fees
     * SHALL be removed.
     */
    ConsensusCustomFeeList custom_fees = 12;
}
